<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2020-2025 NetCracker Technology Corporation

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.qubership.nifi</groupId>
    <artifactId>nifi</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    
    <properties>
        <revision>1.0.0</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
        <nifi.version>1.28.1</nifi.version>
        <nifi.nar.plugin.version>1.5.1</nifi.nar.plugin.version>
        <pmd.version>3.10.0</pmd.version>
        <jacoco.version>0.8.8</jacoco.version>
        <lombok.version>1.18.30</lombok.version>
        <resources.version>3.1.0</resources.version>
        <testcontainers.version>1.20.4</testcontainers.version>
        <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
        <spring.version>6.1.1</spring.version>
        <spring.security.version>5.8.5</spring.security.version>
        <logback.version>1.3.8</logback.version>
        <slf4j.version>2.0.11</slf4j.version>
        <jedis.version>3.10.0</jedis.version>
        <hikari.cp.version>5.1.0</hikari.cp.version>
        <jackson.version>2.16.1</jackson.version>
        <jackson.databind.version>2.16.1</jackson.databind.version>
        <caffeine.version>2.9.3</caffeine.version>
        <okhttp.version>4.12.0</okhttp.version>
        <okhttp.mockwebserver.version>4.12.0</okhttp.mockwebserver.version>
        <commons.lang3.version>3.14.0</commons.lang3.version>
        <commons.text.version>1.11.0</commons.text.version>
        <commons.io.version>2.15.1</commons.io.version>
        <postgresql.jdbc.version>42.5.5</postgresql.jdbc.version>
        <junit.jupiter.version>5.11.1</junit.jupiter.version>
    </properties>

    <modules>
        <module>qubership-nifi-common</module>
        <module>qubership-nifi-bundle-common</module>
        <module>qubership-services</module>
        <module>qubership-nifi-bulk-redis-service</module>
        <module>qubership-bundle</module>
        <module>qubership-nifi-db-bundle</module>
        <module>qubership-nifi-lookup-services</module>
        <module>qubership-nifi-deps</module>
        <module>qubership-consul</module>
    </modules>

    <reporting>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>3.1.11</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.12.0</version>
            </plugin>
        </plugins>
    </reporting>


    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report-aggregate</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>org/qubership/**/*</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.nifi</groupId>
                <artifactId>nifi-nar-maven-plugin</artifactId>
                <version>${nifi.nar.plugin.version}</version>
                <extensions>true</extensions>
                <!--<executions>
                    <execution>
                        <id>build-nar</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>nar</goal>
                        </goals>
                    </execution>
                </executions>-->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <argLine>@{argLine} -Duser.timezone=UTC</argLine>
                    <environmentVariables>
                        <DOCKER_HOST>${env.TEST_DOCKER_URL}</DOCKER_HOST>
                        <testcontainers.environmentprovider.timeout>60</testcontainers.environmentprovider.timeout>
                    </environmentVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd.version}</version>
                <configuration>
                    <failOnViolation>false</failOnViolation>
                    <aggregate>true</aggregate>
                    <printFailingErrors>true</printFailingErrors>
                    <minimumTokens>200</minimumTokens>
                    <analysisCache>true</analysisCache>
                    <linkXRef>true</linkXRef>
                    <includeTests>true</includeTests>
                    <failurePriority>2</failurePriority>
                    <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                            <!--<goal>cpd-check</goal>-->
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>net.sourceforge.pmd</groupId>
                        <artifactId>pmd-java</artifactId>
                        <version>6.37.0</version>
                    </dependency>
                    <dependency>
                        <groupId>net.sourceforge.pmd</groupId>
                        <artifactId>pmd-core</artifactId>
                        <version>6.37.0</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.3</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>3.6.0.1398</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>